# sshexpr

./: Makefile.in  configure  configure.ac
conf/: sshexpr.conf.in
src/lib/: functions
t/spec/: base.ini  echo.ini  exec.ini  hook.ini  next.ini  scan.ini  tran.ini
